Adding user lists capability
